2012-08-03  Benjamin Poulain  <benjamin@webkit.org>

        StringImpl created from literal should be BufferInternal
        https://bugs.webkit.org/show_bug.cgi?id=92940

        Reviewed by Anders Carlsson.

        The ownership of string created from literal should be BufferInternal so that
        StringImpl never tries to delete the characters.

        The ownership was accidentaly set to BufferOwned in r123689.

        * wtf/text/StringImpl.cpp:
        (WTF::StringImpl::createFromLiteral): Update to use the new constructor.
        * wtf/text/StringImpl.h:
        (WTF::StringImpl::StringImpl):
        Add a new constructor making the construction from literal explicit.
        Add the flag s_hashFlagHasTerminatingNullCharacter since the data has the terminating
        null character.

2012-08-02  Patrick Gansterer  <paroga@webkit.org>

        Move getLocalTime() as static inline function to DateMath
        https://bugs.webkit.org/show_bug.cgi?id=92955

        Reviewed by Ryosuke Niwa.

        getCurrentLocalTime() and getLocalTime() has been superseded with the
        GregorianDateTime class. So we can move it into DateMath.cpp as an static inline
        function. This allows us to remove the dependecy on time() and localtime()
        for Windows CE, where this functions require the ce_time library to work.

        * wtf/CurrentTime.cpp:
        (WTF):
        * wtf/CurrentTime.h:
        * wtf/DateMath.cpp:
        (WTF):
        (WTF::getLocalTime):

2012-08-02  Patrick Gansterer  <paroga@webkit.org>

        [WINCE] Return 0 at calculateDSTOffset(double, double)
        https://bugs.webkit.org/show_bug.cgi?id=92953

        Reviewed by Ryosuke Niwa.

        localtime() is implemented as a call to gmtime() in ce_time.c.
        Since this will never return correct values, returning 0 instead
        does not remove any existing functionality, but decreases the
        dependency on the (external) ce_time implementation.
